# deepseek-quickstart

./: .gitignore  README.md  pyproject.toml
.specstory/history/: 2025-06-12_14-08-删除-homebrew-和-miniconda3-的-python.md
deepseek/api/: rag_milvus_deepseek.ipynb
deepseek/api/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
scripts/: run_attu.sh
src/: main.py
src/embeding/: main.py
src/query/: main.py
src/rednote_agent/: main.py
