[project]
name = "ai-full-stack-develop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.83.0",
  "pymilvus[model]>=2.5.10",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "torch>=2.7.0",
  "tqdm>=4.67.1",
]
